--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,7 @@
   "homepage": "https://github.com/NickII2000/Exercise-new-89#readme",
   "devDependencies": {
     "json-server": "^0.17.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
